--- a/Practice 3/src/index.html
+++ b/Practice 3/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="h-screen w-auto flex justify-center items-center">
-    <div class="h-96 max-w-86 bg-slate-100 rounded-2xl p-6 flex-col justify-center items-center">
+    <div class="h-96 max-w-86 shadow-2xl bg-slate-100 rounded-2xl p-6 flex-col justify-center items-center transition duration-300 hover:scale-105 hover:shadow-2xl hover:shadow-blue-400">
         <div class="flex justify-center mt-3.5">
             <img class="rounded-full border-6 border-blue-500" src="https://i.pravatar.cc/100" alt="Profile">
         </div>
@@ -19,10 +19,17 @@
         <div class="text-center text-sm leading-relaxed text-gray-600">
             <p>Full Stack Developer at XYZ Corp. Passionate about building modern web apps.</p>
         </div>
-        <a href="#"
-            class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-sm font-semibold underline decoration-dotted ">
-            Visit Profile
-        </a>
+        <div class="flex space-x-2 justify-center content-between">
+            <div class="text-sm text-center mt-6 max-h-5 w-auto bg-green-100 text-green-800 rounded-full px-3">HTML</div>
+            <div class="text-sm text-center mt-6 max-h-5 w-auto bg-blue-100 text-blue-800 rounded-full px-2">CSS</div>
+            <div class="text-sm text-center mt-6 max-h-5 w-auto bg-yellow-200 text-yellow-800 rounded-full px-5">JS</div>
+        </div>
+        <div class="text-center mt-6">
+            <a href="#"
+                class="inline-block bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 text-sm font-semibold underline decoration-dotted ">
+                Visit Profile
+            </a>
+        </div>
     </div>
 </body>
 
