--- a/Practice 4/src/index.html
+++ b/Practice 4/src/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="output.css">
-    <title>Document</title>
+    <title>🍔 Foodiez</title>
 </head>
+
 <body>
+    <nav class="flex justify-between p-4 px-9 bg-transparent text-md items-center">
+        <h1 class="font-semibold text-xl"> 🍔 Foodiez</h1>
+        <ul class="flex space-x-9">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">Testimonials</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul>
+        <button
+            class="font-semibold text-white p-2 rounded-full bg-red-400 cursor-pointer hover:bg-red-500 hover:shadow-2xl">Order
+            Now</button>
+    </nav>
+
+    <section class="flex">
+        <div class="absolute">
+            <img src="./banner.png" alt="" class="w-fit">
+        </div>
+           <div class="relative">
+            <h1>Delicious food delivered to your door</h1>
+            <h3>Fast, fresh, and affordable meals.</h3>
+            <div>
+                <button>View Menu</button>
+                <button>Download App</button>
+            </div>
+        </div>
+    </section>
+
     
 </body>
+
 </html>
